Created basic template for merged webpack

--- a/src/template.html
+++ b/src/template.html
@@ -3,17 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Restaurant Page</title>
+	<title> Title </title>
 </head>
 <body>
-	<header id="header">
-		<nav id="nav">
-			<button class="tab" id="homeTab">Home</button>
-			<button class="tab" id="menuTab">Menu</button>
-		</nav>
-	</header>
-	<div id="content">
 
-	</div>
 </body>
 </html>
