--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      I HOPE THIS WORKS
+    </div>
+  </body>
 </html>
